<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_download_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/black"
        android:text="@string/download_url"

        />

    <AutoCompleteTextView
        android:id="@+id/edit_url"
        android:layout_width="800dp"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:layout_toEndOf="@id/txt_download_url"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp" />

    <!--AutoCompleteTextView
        android:id="@+id/list_url"
        android:layout_width="800dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/txt_download_url"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp" /-->


    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="160dp"
        android:textColor="@android:color/black"
        android:text="@string/status_ready"

        />

    <EditText
        android:id="@+id/edit_log"
        android:layout_width="1160dp"
        android:layout_height="400dp"
        android:layout_alignStart="@id/txt_download_url"
        android:layout_marginStart="0dp"
        android:layout_marginTop="200dp"
        android:background="@color/light_gray"
        android:clickable="true"
        android:cursorVisible="true"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="start|top"
        android:padding="12dp"
        android:scrollbars="vertical"
        android:maxLines="18"
        android:inputType="textMultiLine|textNoSuggestions" />

    <Button
        android:id="@+id/btn_start_download"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/edit_url"
        android:layout_alignBottom="@id/edit_url"
        android:layout_marginStart="20dp"
        android:text="@string/start" />

    <CheckBox
        android:id="@+id/check_performance_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txt_download_url"
        android:layout_marginStart="0dp"
        android:layout_marginTop="110dp"
        android:text="@string/Performance_model" />

    <CheckBox
        android:id="@+id/check_download_to_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/check_performance_model"
        android:layout_marginStart="40dp"
        android:layout_marginTop="110dp"
        android:text="@string/download_to_file" />

    <CheckBox
        android:id="@+id/check_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/check_download_to_file"
        android:layout_alignBottom="@id/check_download_to_file"
        android:layout_marginStart="40dp"
        android:text="@string/repeat" />

    <Button
        android:id="@+id/btn_clear_log"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/check_repeat"
        android:layout_alignBottom="@id/check_repeat"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="-8dp"
        android:text="@string/clear_log" />


</RelativeLayout>